수정 164 logs 개선선